rstudioapi 0.7
--------------------------------------------------------------------------------

* Add createProjectTemplate function

* Add setPersistentValue/getPersistentValue functions


rstudioapi 0.6
--------------------------------------------------------------------------------

* Add sendToConsole function

* Add APIs for setting cursor position in document

rstudioapi 0.5
--------------------------------------------------------------------------------

* Add askForPassword function

* Add getActiveProject function

rstudioapi 0.4
--------------------------------------------------------------------------------

* Add API methods for interacting with a document open in RStudio: 'insertText()', 'modifyRange()' and 'getActiveDocumentContext()'.

rstudioapi 0.3
--------------------------------------------------------------------------------

* Add stub and documentation for sourceMarker function


rstudioapi 0.2
--------------------------------------------------------------------------------

* Compatibility with calling conventions for RStudio v0.99

* Stubs and documentation for versionInfo, previewRd, and viewer functions


rstudioapi 0.1
--------------------------------------------------------------------------------

Initial release to CRAN
