@@ -16,12 +16,14 @@ export(as.document_position)
 export(as.document_range)
 export(askForPassword)
 export(callFun)
+export(clearTerminal)
 export(createProjectTemplate)
 export(document_position)
 export(document_range)
 export(findFun)
 export(getActiveDocumentContext)
 export(getActiveProject)
+export(getActiveTerminalId)
 export(getConsoleEditorContext)
 export(getPersistentValue)
 export(getSourceEditorContext)
@@ -39,6 +41,7 @@ export(primary_selection)
 export(readPreference)
 export(savePlotAsImage)
 export(sendToConsole)
+export(sendToTerminal)
 export(setCursorPosition)
 export(setDocumentContents)
 export(setPersistentValue)
