@@ -1,0 +1,14 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/terminal.R
+\name{getActiveTerminalId}
+\alias{getActiveTerminalId}
+\title{Get Current Terminal}
+\usage{
+getActiveTerminalId()
+}
+\description{
+Get the identifier for the currently active terminal.
+}
+\note{
+The \code{getActiveTerminalId} function was added in version 1.1.223 of RStudio.
+}
